--- a/sinatra/views/index.erb
+++ b/sinatra/views/index.erb
@@ -1,4 +1,8 @@
-<h1> "My name is <%= ["Chester", "Finneas", "Dog Food"].sample %>"<h1/>
+<% if @name %>
+<h1>My name is <%=@name%></h1>
+<% end %>
+
 <div style='border: dashed red;'>
     <img src='https://i.imgur.com/jFaSxym.png'>
-</div>
+  </div>
+</form>
